# Snake-CPP

./: .gitattributes  CMakeLists.txt  README.md
docs/: Registrazione Snake Game.mov
src/: Food.cpp  Game.cpp  Snake.cpp  main.cpp
